Perkin-UAT/force-app/main/default/objects/Lead_Agei__c/Lead_Agei__c.object-meta.xml
<CustomObject>
    <description>Tracking the Lead Owner Change</description>
    <label>Lead Aging Track</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Lead Aging Track Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Aging Track</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>