Perkin-UAT/force-app/main/default/objects/Lead_Agei__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Age</label>
    <length>50</length>
    <type>Text</type>
</CustomField>