Perkin-UAT/force-app/main/default/objects/Lead_Agei__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <label>Modified Date</label>
    <type>DateTime</type>
</CustomField>