Perkin-UAT/force-app/main/default/objects/Lead_Agei__c/fields/In_Queue__c.field-meta.xml
<CustomField>
    <fullName>In_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Queue</label>
    <type>Checkbox</type>
</CustomField>