Perkin-UAT/force-app/main/default/objects/Lead_Agei__c/fields/Lead_Age__c.field-meta.xml
<CustomField>
    <fullName>Lead_Age__c</fullName>
    <label>Age in Days</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>