Perkin-UAT/force-app/main/default/objects/Lead_Agei__c/fields/Lead_Owner_Name1__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Name1__c</fullName>
    <formula>IF( In_Queue__c=FALSE,HYPERLINK(&quot;../&quot; + User_Id__c ,  User_Name__c , &quot;_self&quot;),HYPERLINK(&quot;../p/own/Queue/d?id=&quot; + User_Id__c ,  User_Name__c , &quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner</label>
    <type>Text</type>
</CustomField>