Perkin-UAT/force-app/main/default/objects/Lead_Agei__c/fields/Lead_Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Type__c</fullName>
    <label>Lead Owner Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>