Perkin-UAT/force-app/main/default/objects/Lead_Agei__c/fields/Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Modified_By__c</fullName>
    <label>Modified By</label>
    <length>90</length>
    <type>Text</type>
</CustomField>