Perkin-UAT/force-app/main/default/objects/Lead_Agei__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <description>Holds the current value of the changed field at the time of the record creation.</description>
    <label>New Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>