Perkin-UAT/force-app/main/default/objects/Lead_Agei__c/fields/Previous_Value__c.field-meta.xml
<CustomField>
    <fullName>Previous_Value__c</fullName>
    <description>The value of a field before the Activity occurred. For example, if the Activity was &quot;Value of Lead Status Changed&quot;, then the Previous Value could be &quot;Open&quot;, if the Lead Status field changed from &quot;Open&quot; to &quot;Working&quot;.</description>
    <label>Previous Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>