Perkin-UAT/force-app/main/default/objects/Lead_Agei__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <label>Lead Owner Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>