Perkin-UAT/force-app/main/default/objects/Lead_Agei__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <label>Lead Owner O</label>
    <length>50</length>
    <type>Text</type>
</CustomField>